# cpp-projects

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
01 employee program/: README.md  system
02 tic tac toe game/: README.md  program
03 hospital system/: README.md  hospital_system
04 library system V1/: Book.hpp  BooksManager.hpp  Helper.hpp  LibrarySystem.hpp  README.md  User.hpp  UsersManager.hpp  program.out
04 library system V2/: Book.hpp  BooksManager.hpp  BorrowOperation.hpp  BorrowsManager.hpp  Helper.hpp  LibrarySystem.hpp  README.md  User.hpp  UsersManager.hpp  program.out
05 ask me system/: AskMe.hpp  Helper.hpp  Question.hpp  QuestionsManager.hpp  README.md  User.hpp  UsersManager.hpp  program.out
06 educational management system/: Assignment.hpp  AssignmentSolution.hpp  Course.hpp  CoursesManager.hpp  Doctor.hpp  DoctorSession.hpp  EducationalManageMentSystem.cpp  EducationalManageMentSystem.hpp  Helper.hpp  MenuHandler.hpp  README.md  Student.hpp  StudentSession.hpp  UsersManager.hpp
07 expedia/: AdminSession.cpp  AdminSession.hpp  CustomerSession.cpp  CustomerSession.hpp  Expedia.cpp  Expedia.hpp  Helper.cpp  Helper.hpp  MenuHandler.hpp  a.out  main.cpp
07 expedia/APIs to use/: expedia_flights_api.hpp  expedia_hotels_api.hpp  expedia_payments_api.hpp
07 expedia/payment/: IPayment.cpp  IPayment.hpp
07 expedia/reservations/: IReservation.cpp  IReservation.hpp  Itinerary.hpp
07 expedia/users/: Admin.cpp  Admin.hpp  Customer.cpp  Customer.hpp  IUser.cpp  IUser.hpp  UsersManager.cpp  UsersManager.hpp
projects/01-employee-program/: CMakeLists.txt  README.md
projects/01-employee-program/data/: CMakeLists.txt  employees.txt
projects/01-employee-program/src/: EmployeeSystem.cpp
projects/02-tic-tac-toe-game/: CMakeLists.txt  README.md  board.txt
projects/02-tic-tac-toe-game/src/: TicTacToe.cpp
projects/03-hospital-system/: CMakeLists.txt  README.md
projects/03-hospital-system/data/: CMakeLists.txt  patients.txt
projects/03-hospital-system/src/: HospitalSystem.cpp
projects/04-library-system-v1/: CMakeLists.txt  README.md
projects/04-library-system-v1/src/: Book.cpp  Book.hpp  BooksManager.cpp  BooksManager.hpp  Helper.cpp  Helper.hpp  LibrarySystem.cpp  LibrarySystem.hpp  User.cpp  User.hpp  UsersManager.cpp  UsersManager.hpp
projects/04-library-system-v2/: CMakeLists.txt  README.md
projects/04-library-system-v2/data/: Books.txt  BorrowOperations.txt  CMakeLists.txt  Users.txt
projects/04-library-system-v2/src/: Book.cpp  Book.hpp  BooksManager.cpp  BooksManager.hpp  BorrowOperation.cpp  BorrowOperation.hpp  BorrowsManager.cpp  BorrowsManager.hpp  Helper.cpp  Helper.hpp  LibrarySystem.cpp  LibrarySystem.hpp  User.cpp  User.hpp  UsersManager.cpp  UsersManager.hpp  main.cpp
projects/05-ask-me-system/: CMakeLists.txt  README.md
projects/05-ask-me-system/data/: CMakeLists.txt  Questions.txt  Users.txt
projects/05-ask-me-system/src/: AskMe.cpp  AskMe.hpp  Helper.cpp  Helper.hpp  Question.cpp  Question.hpp  QuestionsManager.cpp  QuestionsManager.hpp  User.cpp  User.hpp  UsersManager.cpp  UsersManager.hpp  main.cpp
projects/06-educational-management-system/: CMakeLists.txt  README.md
projects/06-educational-management-system/data/: test_data.in
projects/06-educational-management-system/src/: Assignment.cpp  Assignment.hpp  AssignmentSolution.cpp  AssignmentSolution.hpp  Course.cpp  Course.hpp  CoursesManager.cpp  CoursesManager.hpp  Doctor.cpp  Doctor.hpp  DoctorSession.cpp  DoctorSession.hpp  EducationalManagementSystem.cpp  EducationalManagementSystem.hpp  Helper.cpp  Helper.hpp  MenuHandler.hpp  Student.cpp  Student.hpp  StudentSession.cpp  StudentSession.hpp  UsersManager.cpp  UsersManager.hpp  main.cpp
